--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 ﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64971",
-      "sslPort": 44388
+      "applicationUrl": "http://localhost:22690",
+      "sslPort": 44343
     }
   },
   "profiles": {
