--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,11 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.15",
     "axios": "^1.6.2",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
