--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,7 @@
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.15",
     "axios": "^1.6.2",
+    "formik": "^2.4.5",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
