--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.37",
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.15",
+    "@types/yup": "^0.32.0",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "mobx": "^6.11.0",
@@ -25,7 +26,8 @@
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
