--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,6 +18,7 @@
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.7"
   }
