--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.15",
     "@types/yup": "^0.32.0",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
